--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Code Katas",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose",
     "start": "rimraf ./build && tsc && node build/index.js"
   },
   "author": "",
